add teacher create

--- a/templates/stuff/base.html
+++ b/templates/stuff/base.html
@@ -69,8 +69,8 @@
                 </ul>
             </div>
             {% endif %}
-        </div>
-    </div>
+        </div>  <!-- container -->
+    </div>  <!-- navbar -->
 
     <!-- Content section -->
     {% block content-block %}{% endblock %}
