--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -6,3 +6,11 @@ body {
   height: 460px;
   overflow-y: auto;
 }
+
+#alert_block {
+  position: fixed;
+  bottom: 5px;
+  right: 20px;
+  width: 350px;
+  margin-bottom: 0px;
+}
