--- a/templates/stuff/index.html
+++ b/templates/stuff/index.html
@@ -74,8 +74,8 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="person_list">
-                        <table class="table table-hover">
+                    <div class="teacher_list">
+                        <!-- <table class="table table-hover">
                             <thead>
                                 <tr>
                                     <th>Имя</th>
@@ -94,7 +94,7 @@
                                 </tr>
                                 {% endfor %}
                             </tbody>
-                        </table>
+                        </table> -->
                     </div>
                 </div>
                 <!-- Students section -->
@@ -108,8 +108,8 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="person_list">
-                        <table class="table table-hover">
+                    <div class="student_list">
+                        <!-- <table class="table table-hover">
                             <thead>
                                 <tr>
                                     <th>first name</th>
@@ -132,7 +132,7 @@
                                 </tr>
                                 {% endfor %}
                             </tbody>
-                        </table>
+                        </table> -->
                     </div>
                 </div>
             </div>
