--- a/templates/stuff/teacher.html
+++ b/templates/stuff/teacher.html
@@ -5,8 +5,42 @@
 {% block content-block %}
 <div class="container">
     <div class="row">
-        <div class="col-md-4">
-            <h2>{{ teacher.first_name }} {{ teacher.last_name }}</h2>
+        <div class="col-md-6">
+            <h2>{{ teacher.first_name }} {{ teacher.last_name }} 
+                {% if teacher.contact %}<small><a href="tel:{{ teacher.contact }}">{{ teacher.contact }}</a></small>{% endif %}
+                {% if teacher.rmv %}<small>Запись в архиве</small>{% endif %}
+            </h2>
+        </div>
+    </div>
+
+    <div class="tab-pane in active fade" role="tabpanel">
+        <div class="navbar navbar-default">
+            <div class="container-fluid">
+                <ul class="nav navbar-nav navbar-right">
+                    <li data-toggle="tooltip" data-placement="bottom" title="Назначить студента">
+                        <a href="#" class="assign_student_to_teacher" data-toggle="modal"><span class="glyphicon glyphicon-plus"></span></a>
+                    </li>
+                    <li data-toggle="tooltip" data-placement="bottom" title="Редактировать">
+                        <a href="#" class=""><span class="glyphicon glyphicon-pencil"></span></a>
+                    </li>
+                    <li class="dropdown" data-toggle="tooltip" data-placement="bottom" title="В архив">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <span class="glyphicon glyphicon-remove"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li class="dropdown-header">Поместить в архив?</li>
+                            <li class="divider" role="separator"></li>
+                            <li>
+                                <a href="#" onclick="" class="delete_person" url="/teacher/{{ teacher.id }}/delete/">{% csrf_token %}<span class="glyphicon glyphicon-remove"></span> Удалить</a>
+                            </li>
+                            <li>
+                                <a href="#" onclick="" class="archive_person" url="/teacher/{{ teacher.id }}/archive/">{% csrf_token %}<span class="glyphicon glyphicon-thumbs-down"></span> В архив</a>
+                            </li>
+                            <li><a href="#"><span class="glyphicon glyphicon-thumbs-up"></span> Отмена</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 
@@ -21,5 +55,8 @@
         </div>
     </div>
 </div>
+
+<!-- Alert block -->
+<div id="alert_block"></div>
 
 {% endblock %}
