--- a/templates/stuff/teacher.html
+++ b/templates/stuff/teacher.html
@@ -25,18 +25,27 @@
                     </li>
                     <li class="dropdown" data-toggle="tooltip" data-placement="bottom" title="В архив">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            <span class="glyphicon glyphicon-remove"></span>
+                            <span class="glyphicon glyphicon-cog"></span>
                         </a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-header">Поместить в архив?</li>
                             <li class="divider" role="separator"></li>
                             <li>
-                                <a href="#" onclick="" class="delete_person" url="/teacher/{{ teacher.id }}/delete/">{% csrf_token %}<span class="glyphicon glyphicon-remove"></span> Удалить</a>
+                                <a href="#" onclick="" class="archive_person" url="/teacher/{{ teacher.id }}/archive/">{% csrf_token %}
+                                    {% if teacher.rmv %}
+                                        <span class="glyphicon glyphicon-eye-open"></span> Из архива
+                                    {% else %}
+                                        <span class="glyphicon glyphicon-eye-close"></span> В архив
+                                    {% endif %}
+                                    
+                                </a>
                             </li>
                             <li>
-                                <a href="#" onclick="" class="archive_person" url="/teacher/{{ teacher.id }}/archive/">{% csrf_token %}<span class="glyphicon glyphicon-thumbs-down"></span> В архив</a>
+                                <a href="#" onclick="" class="delete_person" url="/teacher/{{ teacher.id }}/delete/">{% csrf_token %}
+                                    <span class="glyphicon glyphicon-trash"></span> Удалить
+                                </a>
                             </li>
-                            <li><a href="#"><span class="glyphicon glyphicon-thumbs-up"></span> Отмена</a></li>
+                            <li><a href="#"><span class="glyphicon glyphicon-asterisk"></span> Отмена</a></li>
                         </ul>
                     </li>
                 </ul>
