add active\archive views

--- a/templates/stuff/teacher.html
+++ b/templates/stuff/teacher.html
@@ -63,7 +63,7 @@
             <div id="classes_per_day"></div>
         </div>
     </div>
-</div>
+</div> <!-- container -->
 
 <!-- Alert block -->
 <div id="alert_block"></div>
