--- a/templates/stuff/index.html
+++ b/templates/stuff/index.html
@@ -53,7 +53,7 @@
                     {% endif %}
                 {% endif %}
             </div>
-        </div>
+        </div>  <!-- sidebar -->
 
         <!-- Main section -->
         <div class="col-md-9">
@@ -71,6 +71,8 @@
                                 <li data-toggle="tooltip" data-placement="bottom" title="Добавить преподавателя">
                                     <a href="" class="add_person" person="teacher" data-toggle="modal"><span class="glyphicon glyphicon-plus"></span></a>
                                 </li>
+                                <li class="show_active_person_list active" person="teacher"><a href="">Активные</a></li>
+                                <li class="show_archive_person_list" person="teacher"><a href="">В архиве</a></li>
                             </ul>
                         </div>
                     </div>
@@ -86,6 +88,8 @@
                                 <li data-toggle="tooltip" data-placement="bottom" title="Добавить студента">
                                     <a href="" class="add_person" person="student"><span class="glyphicon glyphicon-plus"></span></a>
                                 </li>
+                                <li class="show_active_person_list active" person="student"><a href="">Активные</a></li>
+                                <li class="show_archive_person_list" person="student"><a href="">В архиве</a></li>
                             </ul>
                         </div>
                     </div>
@@ -95,8 +99,8 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
+    </div>  <!-- row -->
+</div>  <!-- container -->
 
 <!-- Modal section -->
 
