--- a/templates/stuff/add_student.html
+++ b/templates/stuff/add_student.html
@@ -1,4 +1,4 @@
-<form action="javascript:void(null)" onsubmit="add_student()" method="post" id="add_student_form" person="student">
+<form action="javascript:void(null)" onsubmit="add_student()" method="post" id="add_student_form">
     {% csrf_token %}
 
     {% for field in form %}
