--- a/templates/stuff/add_teacher.html
+++ b/templates/stuff/add_teacher.html
@@ -1,4 +1,4 @@
-<form action="javascript:void(null)" onsubmit="add_teacher()" method="post" id="add_teacher_form" person="teacher">
+<form action="javascript:void(null)" onsubmit="add_teacher()" method="post" id="add_teacher_form">
     {% csrf_token %}
 
     {% for field in form %}
