--- a/templates/stuff/assign_student_to_teacher.html
+++ b/templates/stuff/assign_student_to_teacher.html
@@ -1,4 +1,4 @@
-<form action="javascript:void(null)" onsubmit="add_teacher()" method="post" id="add_teacher_form">
+<form action="javascript:void(null)" onsubmit="assign_student_to_teacher()" method="post" id="assign_student_to_teacher_form">
     {% csrf_token %}
 
     {% for field in form %}
@@ -12,5 +12,5 @@
         </div>
     {% endfor %}
     
-    <input class="btn btn-default" id="add_teacher_btn" type="submit" value="Сохранить">
+    <input class="btn btn-default" id="assign_student_to_teacher_btn" type="submit" value="Сохранить">
 </form>
