--- a/templates/stuff/index.html
+++ b/templates/stuff/index.html
@@ -67,17 +67,16 @@
                 <div class="tab-pane in active fade" role="tabpanel" id="teachers_list_panel">
                     <div class="navbar navbar-default">
                         <div class="container-fluid">
-                            <form action="javascript:void(null)" oninput="show_search_results_teacher()" class="navbar-form navbar-left" role="search" id="search_results_teacher_form">
+                            <form action="javascript:void(null)" class="navbar-form navbar-left" role="search" id="search_results_teacher_form">
                                 <div class="form-group">
-                                    {% csrf_token %}
-                                    <input type="text" class="form-control" placeholder="Search" id="search_results_teacher_input">
+                                    <input type="text" name="req" class="form-control" placeholder="Search" id="search_results_teacher_input">
                                 </div>
                             </form>
                             <ul class="nav navbar-nav navbar-right">
                                 <li data-toggle="tooltip" data-placement="bottom" title="Добавить преподавателя">
                                     <a href="" id="add_teacher" data-toggle="modal"><span class="glyphicon glyphicon-plus"></span></a>
                                 </li>
-                                <li id="show_active_teacher_list active"><a href="">Активные</a></li>
+                                <li id="show_active_teacher_list" class="active"><a href="">Активные</a></li>
                                 <li id="show_archive_teacher_list"><a href="">В архиве</a></li>
                             </ul>
                         </div>
@@ -90,11 +89,16 @@
                 <div class="tab-pane fade" role="tabpanel" id="students_list_panel">
                     <div class="navbar navbar-default">
                         <div class="container-fluid">
+                            <form action="javascript:void(null)" class="navbar-form navbar-left" role="search" id="search_results_student_form">
+                                <div class="form-group">
+                                    <input type="text" name="req" class="form-control" placeholder="Search" id="search_results_student_input">
+                                </div>
+                            </form>
                             <ul class="nav navbar-nav navbar-right">
                                 <li data-toggle="tooltip" data-placement="bottom" title="Добавить студента">
                                     <a href="" id="add_student"><span class="glyphicon glyphicon-plus"></span></a>
                                 </li>
-                                <li id="show_active_student_list active"><a href="">Активные</a></li>
+                                <li id="show_active_student_list" class="active"><a href="">Активные</a></li>
                                 <li id="show_archive_student_list"><a href="">В архиве</a></li>
                             </ul>
                         </div>
@@ -110,14 +114,14 @@
 
 <!-- Modal section -->
 
-<div class="modal fade" id="add_person_modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+<div class="modal fade" id="index_page_modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" area-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 id="add_person_title"></h4>
+                <h4 id="index_page_modal_title"></h4>
             </div>
-            <div class="modal-body" id="add_person_body"></div>
+            <div class="modal-body" id="index_page_modal_body"></div>
         </div>
     </div>
 </div>
