add reject student

--- a/templates/stuff/teacher.html
+++ b/templates/stuff/teacher.html
@@ -24,6 +24,9 @@
                 <li data-toggle="tooltip" data-placement="bottom" title="Назначить студента">
                     <a href="#" id="assign_student_to_teacher" data-toggle="modal"><span class="glyphicon glyphicon-plus"></span></a>
                 </li>
+                <li data-toggle="tooltip" data-placement="bottom" title="Удалить студента">
+                    <a href="#" id="reject_student_to_teacher" data-toggle="modal"><span class="glyphicon glyphicon-minus"></span></a>
+                </li>
                 <li data-toggle="tooltip" data-placement="bottom" title="Редактировать">
                     <a href="#" class=""><span class="glyphicon glyphicon-pencil"></span></a>
                 </li>
