--- a/templates/stuff/subjects_per_teacher.html
+++ b/templates/stuff/subjects_per_teacher.html
@@ -3,7 +3,7 @@
         <th>Имя</th>
         <th>Фамилия</th>
         <th>Предмет</th>
-        <th><span class="glyphicon glyphicon-option-vertical"></span></th>
+        <th><span class="glyphicon glyphicon-option-horizontal"></span></th>
     </thead>
     <tbody>
         {% for subject in subjects %}
@@ -11,7 +11,10 @@
                 <td>{{ subject.student.first_name }}</td>
                 <td>{{ subject.student.last_name }}</td>
                 <td>{{ subject.subject }}</td>
-                <td><a href="{% url 'student_details' student_id=subject.student.id %}"><span class="glyphicon glyphicon-arrow-right"></span></a></td>
+                <td>
+                    <a href="{% url 'student_details' student_id=subject.student.id %}">
+                        <span class="glyphicon glyphicon-arrow-right"></span></a>
+                </td>
             </tr>
         {% endfor %}
     </tbody>
