add schedule edit

--- a/templates/stuff/index.html
+++ b/templates/stuff/index.html
@@ -115,7 +115,7 @@
 <!-- Modal section -->
 
 <div class="modal fade" id="index_page_modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
-    <div class="modal-dialog modal-sm">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" area-label="Close"><span aria-hidden="true">&times;</span></button>
