--- a/templates/stuff/teacher.html
+++ b/templates/stuff/teacher.html
@@ -27,8 +27,17 @@
                 <li data-toggle="tooltip" data-placement="bottom" title="Удалить студента">
                     <a href="#" id="reject_student_to_teacher" data-toggle="modal"><span class="glyphicon glyphicon-minus"></span></a>
                 </li>
-                <li data-toggle="tooltip" data-placement="bottom" title="Редактировать">
-                    <a href="#" class=""><span class="glyphicon glyphicon-pencil"></span></a>
+                <li class="dropdown" data-toggle="tooltip" data-placement="bottom" title="Изменить">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        <span class="glyphicon glyphicon-pencil"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#" onclick="" id="set_available_timestamps">
+                            <span class="glyphicon glyphicon-calendar"></span> Изменить окна</a>
+                        </li>
+                        <li><a href="#">
+                            <span class="glyphicon glyphicon-th"></span> Изменить граффик ученика</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="dropdown" data-toggle="tooltip" data-placement="bottom" title="В архив">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -37,20 +46,16 @@
                     <ul class="dropdown-menu">
                         <li class="dropdown-header">Поместить в архив?</li>
                         <li class="divider" role="separator"></li>
-                        <li>
-                            <a href="#" onclick="" id="archive_teacher">{% csrf_token %}
+                        <li><a href="#" onclick="" id="archive_teacher">{% csrf_token %}
                                 {% if teacher.rmv %}
                                     <span class="glyphicon glyphicon-eye-open"></span> Из архива
                                 {% else %}
                                     <span class="glyphicon glyphicon-eye-close"></span> В архив
-                                {% endif %}
-                                
-                            </a>
+                                {% endif %}</a>
                         </li>
                         <li>
                             <a href="#" onclick="" id="delete_teacher">{% csrf_token %}
-                                <span class="glyphicon glyphicon-trash"></span> Удалить
-                            </a>
+                                <span class="glyphicon glyphicon-trash"></span> Удалить</a>
                         </li>
                         <li><a href="#"><span class="glyphicon glyphicon-asterisk"></span> Отмена</a></li>
                     </ul>
@@ -89,7 +94,7 @@
 <!-- Modal section -->
 
 <div class="modal fade" id="teacher_page_modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
-    <div class="modal-dialog modal-sm">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" area-label="Close"><span aria-hidden="true">&times;</span></button>
